add_library(Stations
            Station/Station.h
            NonStopStation/NonStopStation.h
            NonStopStation/NonStopStation.cpp
            TransitionStation/TransitionStation.h
            TransitionStation/TransitionStation.cpp
            TransitionHub/TransitionHub.h
            TransitionHub/TransitionHub.cpp)